Fix soft button image in AlertManeuer
There was a wrong style specified for a right text button
template causing text overlapping with icon. Also, HMI should
consider three different template options depending on
soft button type. Also, icon assignment was wrong.

--- a/css/sdl.css
+++ b/css/sdl.css
@@ -99,7 +99,7 @@
 }
 
 .softButton .right_text {
-    padding-left: 5px !important;
+    padding-left: 50px;
 }
 
 .sdl-window .back-button {
@@ -1455,8 +1455,8 @@
 #baseNavigation .softButton, #AlertManeuverPopUp .softButton, #AudioPassThruPopUp .softButton, #AlertPopUp .softButton {
     border: 1px solid #393939;
     border-radius: 3px;
-    height: 42px;
-    line-height: 42px;
+    height: 50px;
+    line-height: 45px;
     text-align: center;
     float: left;
     margin: 10px;
